Update game systems and release assets